--- a/data/settings.json
+++ b/data/settings.json
@@ -3,5 +3,7 @@
     "Food": 7000.0,
     "Others": 67.0
   },
-  "initial_balance": 8889.79
+  "initial_balance": 9128.9,
+  "initial_cash_balance": 2430.0,
+  "initial_savings_balance": 61103.0
 }
